--- a/Day_57/templates/index.html
+++ b/Day_57/templates/index.html
@@ -30,9 +30,11 @@
         <!-- TODO: Add code to delete posts below -->
         <p class="post-meta">
           Posted by
-          <a href="#">{{post.author}}</a>
+          <a href="#">{{ post.author.name }}</a>
           on {{post.date}}
+            {% if user_id == '1' %}
           <a href="{{ url_for('delete_post', post_id=post.id) }}">✘</a>
+            {% endif %}
         </p>
       </div>
       <!-- Divider-->
@@ -40,14 +42,15 @@
       {% endfor %}
 
       <!-- New Post -->
+      {% if user_id == '1' %}
       <div class="d-flex justify-content-end mb-4">
-      <!-- TODO: Adding new posts -->
         <a
           class="btn btn-primary float-right"
           href="{{ url_for('add_new_post') }}"
           >Create New Post</a
         >
       </div>
+        {% endif %}
 
 {#      <!-- Pager-->#}
 {#      <div class="d-flex justify-content-end mb-4">#}
