--- a/Day_57/templates/post.html
+++ b/Day_57/templates/post.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-
+{% from 'bootstrap4/form.html' import render_form %}
 <!-- Page Header-->
 <header class="masthead" style="background-image: url('{{post.img_url}}')">
   <div class="container position-relative px-4 px-lg-5">
@@ -10,7 +10,7 @@
           <h2 class="subheading">{{ post.subtitle }}</h2>
           <span class="meta"
             >Posted by
-            <a href="#">{{ post.author }}</a>
+            <a href="#">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
         </div>
@@ -25,13 +25,32 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
-
+          {% if user_id == '1' %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
-            href="{{ url_for('edit_post', post_id=post.id) }}"
+            href="{{url_for('edit_post', post_id=post.id)}}"
             >Edit Post</a
           >
+        </div>
+          {% endif %}
+
+        <!-- Comments Area -->
+        {{ render_form(form) }}
+          {{ ckeditor.load() }}
+        <div class="comment">
+          <!-- TODO: Show all the comments on a post -->
+          <ul class="commentList">
+            <li>
+              <div class="commenterImage">
+                <img src="../static/assets/img/default-profile.jpg" />
+              </div>
+              <div class="commentText">
+                <p>Some comment</p>
+                <span class="date sub-text">comment author name</span>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
